# proc-macro-workshop

./: README.md  rustfmt.toml
bitfield/: Cargo.toml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: bit.rs  gen.rs  lib.rs  seq.rs  spe.rs
bitfield/src/: checks.rs  lib.rs  pos.rs  tests.rs
bitfield/src/pos/: mod.rs  tests.rs  u16.rs  u32.rs  u64.rs  u8.rs
bitfield/tests/: 03-accessors2.rs  04-multiple-of-8bits.stderr  09-variant-out-of-range2.rs  09-variant-out-of-range2.stderr  bits_pos.rs  progress.rs  tmp.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 07-repeated-field-same-name.rs  progress.rs
debug/: Cargo.toml
debug/src/: bound.rs  generics.rs  lib.rs
debug/tests/: 04-type-parameter-debug.rs  07-associated-type-direct.rs  07-associated-type-multi.rs  08-escape-hatch-multi.rs  progress.rs
seq/: Cargo.toml
seq/src/: lib.rs  range.rs  repeat.rs  replace.rs
seq/tests/: 04-paste-ident2.rs  05-repeat-section2.rs  09-interaction-with-macrorules2.rs  09-interaction-with-macrorules2.stderr  10-literal-range-parse-err.rs  10-literal-range-parse-err.stderr  dcl-seq.rs  progress.rs
sorted/: Cargo.toml
sorted/src/: _enum.rs  _fn.rs  cmp.rs  lib.rs
sorted/tests/: 08-underscore-failed.rs  08-underscore-failed.stderr  progress.rs
