[package]
name = "bitfield"
version = "0.0.0"
edition = "2021"
autotests = false
publish = false

[[test]]
name = "tests"
path = "tests/progress.rs"

[[test]]
name = "bits_pos"
path = "./tests/bits_pos.rs"

[[test]]
name = "09"
path = "./tests/09-variant-out-of-range2.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
bitfield-impl = { path = "impl" }
